<resources>
    <string name="app_name">VR</string>
    <string name="title_activity_rules">Supra India Rules 2020 </string>
    <string name="large_text">

    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_info">ScrollingActivity</string>
    <string name="title_activity_survey">ScrollingActivity</string>
    <string name="title_activity_rul">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_lol">ScrollingActivity</string>
    <string name="title_activity_lpl">ScrollingActivity</string>
    <string name="requirements">Requirements</string>
    <string name="calculate_ackerman">Calculate Ackerman %</string>
    <string name="survey">Survey</string>
    <string name="calculate_steering_effort">Calculate Steering Effort</string>
    <string name="vegadooth_racing">Vegadooth Racing</string>
    <string name="steering">Steering</string>
    <string name="mass_acting_on_c_in_kg">Mass acting on C in kg</string>
    <string name="wheelbase_a1_a2">Wheelbase (a1+a2)</string>
    <string name="steering_effort_in_n">Steering Effort in N</string>
    <string name="calculate">Calculate</string>
    <string name="radius_of_steering_wheel_in_mm">Radius of Steering Wheel in mm</string>
    <string name="distance_b_w_rear_axle_to_c_a2">Distance b/w Rear axle to C.(a2)</string>
    <string name="radius_of_pinion_in_mm">Radius of pinion in mm</string>
    <string name="mass_of_each_tyre_in_kg">Mass of each tyre in kg</string>
    <string name="tasks">Tasks</string>
    <string name="save_note">Save Note</string>
    <string name="enter_notes">Enter Notes</string>
    <string name="a">A</string>
    <string name="sin_a">sin(A)</string>
    <string name="cos_a">cos(A)</string>
    <string name="tan_a">tan(A)</string>
    <string name="degree_radians"><![CDATA[Degree->Radians]]></string>
    <string name="radians_degrees"><![CDATA[Radians->Degrees]]></string>
    <string name="sin_1_a">sin-1(A)</string>
    <string name="cos_1_a">cos-1(A)</string>
    <string name="tan_1_a">tan-1(A)</string>
    <string name="log_a">log(A)</string>
    <string name="y">y</string>
    <string name="x">x</string>
    <string name="x_y">x*y</string>
    <string name="x_y1">x/y</string>
    <string name="x_y2">x-y</string>
    <string name="x_y3">x+y</string>
    <string name="lol">lol</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="ya">ya</string>
    <string name="stopwatch">stopwatch</string>
    <string name="car">car</string>
    <string name="distance_between_the_pivots_of_front_axles">Distance between the pivots of front axles</string>
    <string name="wheel_base">Wheel base</string>
    <string name="other_angle">Other Angle</string>
    <string name="track_width">Track Width</string>
    <string name="calculate1">Calculate</string>
    <string name="front_wheel_angle_in_degrees">Front Wheel Angle in Degrees</string>
    <string name="total_steer_angle">Total Steer Angle</string>
    <string name="ackerman_value">Ackerman Value</string>
    <string name="ackerman_percent">Ackerman percent</string>
    <string name="in_out">in/out</string>
    <string name="surveypic">survey</string>
    <string name="car2">car2</string>
    <string name="t6_5_1_the_steering_wheel_must_be_mechanically_connected_to_the_wheels_i_e_steer_by_wire_is_prohibited_or_electrically_actuated_steering_is_prohibited_n_n_t6_5_2_the_steering_system_must_have_positive_steering_stops_that_prevent_the_steering_linkages_from_locking_up_the_inversion_of_a_four_bar_linkage_at_one_of_the_pivots_the_stops_may_be_placed_on_the_uprights_or_on_the_rack_and_must_prevent_the_tires_from_contacting_suspension_body_or_frame_members_during_the_track_events_n_n_t6_5_3_allowable_steering_system_free_play_is_limited_to_seven_degrees_7_total_measured_at_the_steering_wheel_n_n_t6_5_4_the_steering_wheel_must_be_attached_to_the_column_with_a_quick_disconnect_the_driver_must_be_able_to_operate_the_quick_disconnect_while_in_the_normal_driving_position_with_gloves_on_n_n_t6_5_5_the_steering_wheel_must_have_a_continuous_perimeter_that_is_near_circular_or_near_oval_i_e_the_outer_perimeter_profile_can_have_some_straight_sections_but_no_concave_sections_h_or_cutout_wheels_are_not_allowed_n_n_t6_5_6_in_any_angular_position_the_top_of_the_steering_wheel_must_be_no_higher_than_the_top_most_surface_of_the_front_hoop_3_n_n_t6_5_7_steering_systems_using_cables_for_actuation_are_not_prohibited_by_t6_5_1_but_additional_documentation_must_be_submitted_the_team_must_submit_a_failure_modes_and_effects_analysis_report_with_design_details_of_the_proposed_system_as_part_of_the_structural_equivalency_spreadsheet_ses_the_report_must_outline_the_analysis_that_was_done_to_show_the_steering_system_will_function_properly_potential_failure_modes_and_the_effects_of_each_failure_mode_and_finally_failure_mitigation_strategies_used_by_the_team_the_organizing_committee_will_review_the_submission_and_advise_the_team_if_the_design_is_approved_if_not_approved_a_non_cable_based_steering_system_must_be_used_instead">T6.5.1 The steering wheel must be mechanically connected to the wheels, i.e. \'steer-by-wire\' is prohibited or electrically actuated steering, is prohibited.\n\n T6.5.2 The steering system must have positive steering stops that prevent the steering linkages from locking up (the inversion of a four-bar linkage at one of the pivots). The stops may be placed on the uprights or on the rack and must prevent the tires from contacting suspension, body, or frame members during the track events.\n\n T6.5.3 Allowable steering system free play is limited to seven degrees (7°) total measured at the steering wheel.\n\n T6.5.4 The steering wheel must be attached to the column with a quick disconnect. The driver must be able to operate the quick disconnect while in the normal driving position with gloves on.\n\n T6.5.5 The steering wheel must have a continuous perimeter that is near circular or near oval, i.e. the outer perimeter profile can have some straight sections, but no concave sections. \'H\', or cutout wheels are not allowed.\n\n T6.5.6 In any angular position, the top of the steering wheel must be no higher than the top-most surface of the Front Hoop. 3.\n\n T6.5.7 steering systems using cables for actuation are not prohibited by T6.5.1 but additional documentation must be submitted. The team must submit a failure modes and effects analysis report with design details of the proposed system as part of the structural equivalency spreadsheet (SES). The report must outline the analysis that was done to show the steering system will function properly, potential failure modes and the effects of each failure mode and finally failure mitigation strategies used by the team. The organizing committee will review the submission and advise the team if the design is approved. If not approved, a non-cable based steering system must be used instead.</string>
    <string name="sushen">Sushen</string>
</resources>