<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cal">

    <EditText
        android:id="@+id/w"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/distance_between_the_pivots_of_front_axles"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/wheel_base"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/angle"
        app:layout_constraintStart_toStartOf="@+id/w"
        app:layout_constraintTop_toBottomOf="@+id/w"
        app:layout_constraintVertical_bias="0.064"
        android:autofillHints="" />

    <EditText
        android:id="@+id/angle"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/front_wheel_angle_in_degrees"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/l"
        app:layout_constraintTop_toBottomOf="@+id/w" />

    <EditText
        android:id="@+id/t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/track_width"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="UnknownId"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="388dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:onClick="calAngle"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toEndOf="@+id/_dynamic"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/inout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/in_out"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/angle"
        app:layout_constraintTop_toBottomOf="@+id/angle"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="108dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="@+id/inout"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="40dp"
        android:text="@string/total_steer_angle"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inout" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="108dp"
        android:layout_height="22dp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:text="@string/other_angle"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="108dp"
        android:layout_height="22dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="111dp"
        android:layout_height="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />



    <TextView
        android:id="@+id/textView10"
        android:layout_width="108dp"
        android:layout_height="22dp"
        android:layout_marginTop="52dp"
        android:text="@string/ackerman_value"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/t" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="52dp"
        android:text="@string/ackerman_percent"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>